[tool.poetry]
name = "wzry-skin"
version = "0.1.0"
description = ""
authors = ["Jason Swift <anemele@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
lxml = "^4.9.3"
fake-useragent = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
